@@ -701,35 +701,39 @@ macAppBundle {
     javaProperties.put("com.apple.hwaccel", "true")
     javaProperties.put("apple.laf.useScreenMenuBar", "true")
     javaProperties.put("file.encoding", "UTF-8")
-    javaExtrasList.add("--add-exports")
-    javaExtrasList.add("java.desktop/com.apple.eawt=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
-    javaExtrasList.add("java.desktop/com.apple.laf=ALL-UNNAMED")
+    javaProperties.put("sun.java2d.d3d", "false")
+    javaProperties.put("sun.java2d.noddraw", "false")
+    javaProperties.put("sun.java2d.metal", "true")
+    javaProperties.put("apple.awt.enableTemplateImages", "true")
+    javaProperties.put("-Xshare:auto", null)
+    javaProperties.put("-XX:-UsePerfData", null)
+    javaProperties.put("-XX:+TieredCompilation", null)
+    javaProperties.put("-XX:TieredStopAtLevel=1", null)
     javaExtrasList.add("--add-exports")
     javaExtrasList.add("java.desktop/com.apple.laf=ALL-UNNAMED")
     javaExtrasList.add("--add-exports")
     javaExtrasList.add("java.desktop/com.apple.eio=ALL-UNNAMED")
     javaExtrasList.add("--add-exports")
     javaExtrasList.add("java.desktop/com.apple.eawt=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.desktop/javax.swing.plaf.basic=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.base/java.io=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.base/java.net=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.transaction.xa/javax.transaction.xa=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.management/javax.management=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.rmi/java.rmi=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.security.jgss/org.ietf.jgss=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.sql/java.sql=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.base/sun.net.www.protocol.http=ALL-UNNAMED")
-    javaExtrasList.add("--add-exports")
+    javaExtrasList.add("--add-opens")
     javaExtrasList.add("java.base/sun.net.www.protocol.https=ALL-UNNAMED")
 }
 
